syntax = "proto3";

option java_package = "io.grpc.examples";
option objc_class_prefix = "HLW";
option go_package = "currencies";
option csharp_namespace = "Google.Protobuf.currencies";

package currencies;

message Currency {
  string Code = 3;
}

message CurrenciesResponse {
  repeated Currency Currencies = 1;
}

message CurrenciesRequest {

}

service CurrencyService {
  rpc GetAll (CurrenciesRequest)  returns (CurrenciesResponse) {}
}
